--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "chatbot",
     "line"
   ],
-  "author": "Kazuki Nakajima",
+  "author": "Balakrishna",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/nkjm/faq-bot/issues"
