--- a/faq-bot-sample/package.json
+++ b/faq-bot-sample/package.json
@@ -18,7 +18,7 @@
   "author": "Balakrishna",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nkjm/faq-bot/issues"
+    "url": "https://github.com/Ba1a123/chatbot.git"
   },
   "homepage": "https://github.com/nkjm/faq-bot#readme",
   "dependencies": {
