--- a/faq-bot-sample/package.json
+++ b/faq-bot-sample/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nkjm/faq-bot.git"
+    "url": "https://github.com/Ba1a123/chatbot.git"
   },
   "keywords": [
     "bot",
@@ -16,11 +16,9 @@
     "line"
   ],
   "author": "Balakrishna",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Ba1a123/chatbot.git"
   },
-  "homepage": "https://github.com/nkjm/faq-bot#readme",
   "dependencies": {
     "bot-express": "^0.3.3",
     "dialogflow": "^0.3.0",
